--- a/root/site/portal/dashboard.css
+++ b/root/site/portal/dashboard.css
@@ -342,3 +342,119 @@
 }
 /*##########################################################################################*/
 
+
+
+/*#Dashboard_job##############################################################################*/
+/*#Estilos tabla de resumen###################################################################*/
+
+.summary-table-resumen {
+  width: 480px;
+}
+
+.summary-table-resumen * {
+  height: 16px;
+}
+
+.summary-table-resumen * th {
+    padding: 8px;
+    line-height: 1.5em;
+    text-align: left;
+    font-weight: bold;
+    background-color: #f0f0f0;
+}
+
+.summary-table-resumen * td {
+    padding: 6px;
+    line-height: 1.2em;
+}
+
+.summary-table-resumen * th {
+  border-top: #ccc 1px solid;
+  border-bottom: #ccc 1px solid;
+}
+
+.summary-table-resumen * th.first-child {
+    border-left: #ccc 1px solid;
+}
+
+.summary-table-resumen * th.last-child {
+    border-right: #ccc 1px solid;
+}
+
+.summary-table-resumen * td.encabezado {
+    padding: 8px;
+    line-height: 1.5em;
+    text-align: left;
+    font-weight: bold;
+    background-color: #f0f0f0;
+    border-left: #ccc 1px solid;
+    border-right: #ccc 1px solid;
+    border-top: #ccc 1px solid;
+    width: 40%;
+}
+
+.summary-table-resumen * td.datos {
+    border-top: #ccc 1px solid;
+    width: 60%;
+}
+
+.summary-table-resumen * td.last-child {
+    border-bottom: #ccc 1px solid;
+}
+/*##########################################################################################*/
+
+/*#Estilos tabla de ejecución###################################################################*/
+
+.summary-table-ejecucion {
+  width: 480px;
+}
+
+.summary-table-ejecucion * {
+  height: 16px;
+}
+
+.summary-table-ejecucion * th {
+    padding: 8px;
+    line-height: 1.5em;
+    text-align: left;
+    font-weight: bold;
+    background-color: #f0f0f0;
+}
+
+.summary-table-ejecucion * td {
+    padding: 6px;
+    line-height: 1.2em;
+}
+
+.summary-table-ejecucion * th {
+  border-top: #ccc 1px solid;
+  border-bottom: #ccc 1px solid;
+}
+
+.summary-table-ejecucion * th.first-child {
+    border-left: #ccc 1px solid;
+}
+
+.summary-table-ejecucion * th.last-child {
+    border-right: #ccc 1px solid;
+}
+
+.summary-table-ejecucion * td.datos {
+    border-bottom: #ccc 1px solid;
+}
+
+.summary-table-ejecucion * td.last-child {
+    border-bottom: #ccc 1px solid;
+}
+
+.summary-table-ejecucion * td.section-paso {
+    padding: 8px;
+    line-height: 1.5em;
+    text-align: left;
+    font-weight: bold;
+    background-color: #f0f0f0;
+    border-left: #ccc 1px solid;
+    border-right: #ccc 1px solid;
+    border-bottom: #ccc 1px solid;    
+    text-align: center;
+}
