--- a/root/site/portal/dashboard.css
+++ b/root/site/portal/dashboard.css
@@ -459,3 +459,68 @@
     border-bottom: #ccc 1px solid;    
     text-align: center;
 }
+
+/*##########################################################################################*/
+
+/*#Estilos tabla de salida###################################################################*/
+
+.summary-table-salida {
+  width: 480px;
+}
+
+.summary-table-salida * {
+  height: 16px;
+}
+
+.summary-table-salida * th {
+    padding: 8px;
+    line-height: 1.5em;
+    text-align: left;
+    font-weight: bold;
+    background-color: #f0f0f0;
+}
+
+.summary-table-salida * td {
+    padding: 6px;
+    line-height: 1.2em;
+}
+
+.summary-table-salida * th {
+  border-top: #ccc 1px solid;
+  border-bottom: #ccc 1px solid;
+}
+
+.summary-table-salida * th.first-child {
+    border-left: #ccc 1px solid;
+}
+
+.summary-table-salida * th.last-child {
+    border-right: #ccc 1px solid;
+}
+
+.summary-table-salida * td.datos {
+    border-bottom: #ccc 1px solid;
+    width: 75%
+}
+
+.summary-table-salida * td.link {
+    border-bottom: #ccc 1px solid;
+    width: 25%
+}
+.summary-table-salida * td.last-child {
+    border-bottom: #ccc 1px solid;
+}
+
+.summary-table-salida * td.section-paso {
+    padding: 8px;
+    line-height: 1.5em;
+    text-align: left;
+    font-weight: bold;
+    background-color: #f0f0f0;
+    border-left: #ccc 1px solid;
+    border-right: #ccc 1px solid;
+    border-bottom: #ccc 1px solid;    
+    text-align: center;
+}
+
+
