--- a/root/site/portal/dashboard.css
+++ b/root/site/portal/dashboard.css
@@ -523,4 +523,64 @@
     text-align: center;
 }
 
+/*#Estilos tabla de contenido###################################################################*/
 
+.summary-table-contenido {
+  width: 480px;
+}
+
+.summary-table-contenido * {
+  height: 16px;
+}
+
+.summary-table-contenido * th {
+    padding: 8px;
+    line-height: 1.5em;
+    text-align: left;
+    font-weight: bold;
+    background-color: #f0f0f0;
+}
+
+.summary-table-contenido * td {
+    padding: 6px;
+    line-height: 1.2em;
+}
+
+.summary-table-contenido * th {
+  border-top: #ccc 1px solid;
+  border-bottom: #ccc 1px solid;
+}
+
+.summary-table-contenido * td.first-child {
+    border-top: #ccc 1px solid;
+}
+
+.summary-table-contenido * th.last-child {
+    border-right: #ccc 1px solid;
+}
+
+.summary-table-contenido * th.last-child {
+    border-right: #ccc 1px solid;
+}
+
+.summary-table-contenido * td.encabezado {
+    padding: 8px;
+    line-height: 1.5em;
+    text-align: left;
+    font-weight: bold;
+    background-color: #f0f0f0;
+    border-left: #ccc 1px solid;
+    border-right: #ccc 1px solid;
+    border-top: #ccc 1px solid;
+    width: 40%;
+}
+
+.summary-table-contenido * td.datos {
+    border-bottom: #ccc 1px solid;
+    width: 60%;
+}
+
+.summary-table-contenido * td.last-child {
+    border-bottom: #ccc 1px solid;
+}
+/*##########################################################################################*/
