--- a/root/site/boot.css
+++ b/root/site/boot.css
@@ -1686,7 +1686,7 @@
   *margin-right: .3em;
   line-height: 14px;
   vertical-align: text-top;
-  background-image: url("http://localhost:3000/site/../img/glyphicons-halflings.png");
+  background-image: url("/site/bootstrap/img/glyphicons-halflings.png");  /* rod */
   background-position: 14px 14px;
   background-repeat: no-repeat;
 }
@@ -1695,7 +1695,7 @@
   *margin-left: 0;
 }
 #boot .icon-white {
-  background-image: url("http://localhost:3000/site/../img/glyphicons-halflings-white.png");
+  background-image: url("/site/bootstrap/img/glyphicons-halflings-white.png");
 }
 #boot .icon-glass {
   background-position: 0      0;
@@ -4375,5 +4375,16 @@
 }
 #boot .invisible {
   visibility: hidden;
+}
+
+/* ------------------ Baseliner Start -----------------*/
+
+#boot {
+  margin: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  color: #333333;
+  background-color: #ffffff;
 }
 
