--- a/root/site/boot.css
+++ b/root/site/boot.css
@@ -4416,6 +4416,14 @@
     font-style: italic;
 }
 
+.forum.status a span {
+  text-transform:uppercase;
+  font-family:Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-size: xx-small;
+  font-weight:bolder;
+  color:#555;
+}
+
 .forum .x-tree-ec-icon {
     display:none;
 }
@@ -4425,6 +4433,7 @@
 .icon-no {
     background-image:url('') !important;
 }
+
 /*
 .x-tree-selected {
     border:1px dotted #a3bae9;
