--- a/root/static/site.css
+++ b/root/static/site.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "museo sans 500";
+  src: url("/static/fonts/open-sans/OpenSans-Regular.ttf");
+}
+
 /* Used to hide TreePanel icons - node.setIconCls('no-icon') */
 .bali-icon-active {
     background: transparent url(/static/images/icons/active.gif) no-repeat center;
