--- a/root/static/final.css
+++ b/root/static/final.css
@@ -6,3 +6,8 @@
     background-image: url("/static/images/row-check-sprite.gif");
 }
 
+.bali-main-menu button {
+    font-family: Calibri;
+    text-transform: uppercase;
+}
+
