--- a/root/static/final.css
+++ b/root/static/final.css
@@ -6,3 +6,10 @@
     background-image: url("/static/images/row-check-sprite.gif");
 }
 
+.bali-main-menu button {
+    font-family: Calibri, OpenSans, Arial;
+    font-size: 11px;
+    margin: 0 0 0 4px;
+    text-transform: uppercase;
+}
+
