--- a/root/static/datepickerplus/datepickerplus.css
+++ b/root/static/datepickerplus/datepickerplus.css
@@ -1,4 +1,4 @@
-.x-date-right a.npy {
+﻿.x-date-right a.npy {
     background-image: url(dbl-right-btn.gif) !important;
 }
 .x-date-left a.npy{
@@ -19,6 +19,10 @@ th.x-date-weeknumber-header a:hover,
 	cursor:default !important;
 }
 
+.x-date-multiselect {
+	height:100%;
+}
+
 .x-date-multiselect th.x-date-weeknumber-header a:hover,
 .x-date-multiselect .x-date-weeknumber-cell a:hover {
 	background-color: #ddecfe !important;
@@ -32,6 +36,7 @@ th.x-date-weeknumber-header a:hover,
 .x-date-pickerplus .x-date-dummy img {
 	height:1px;
 }
+
 
 
 /* Fix for Firefox 3 */
@@ -56,7 +61,7 @@ th.x-date-weeknumber-header a:hover,
 
 .x-date-pickerplus  .x-date-middle {
 	font-weight:normal !important;
-	height:25px;
+	height:26px;
 }
 
 .x-date-multiokbtn,
@@ -66,7 +71,7 @@ th.x-date-weeknumber-header a:hover,
 }
 
 .x-datepickerplus-nationalholidays {
-	background-color:#FFCC00 !important;
+	background-color:#ececec !important;
 }
 
 .x-datepickerplus-weekends {
@@ -83,44 +88,6 @@ th.x-date-weeknumber-header a:hover,
 	background-color:#ccccff;
 	border:1px solid #000088;
 	padding:1px 4px;	
-}
-
-.x-datepickerplus-pase-leyenda{
-	background-color:#FFFFFF;
-	border:solid 1px #000000;
-	width:20px;
-	height:20px;
-}
-
-.x-datepickerplus-eventdates-nopase-leyenda{
-	background-color:#FFCCCC;
-	border:1px solid #FF0000;
-	width:20px;
-	height:20px;
-}
-
-.x-datepickerplus-weekends-leyenda{
-	background-color:#f4f4f4;
-	width:20px;
-	height:20px;
-}
-
-.x-datepickerplus-nationalholidays-leyenda {
-	background-color:#FFCC00 !important;
-	width:20px;
-	height:20px;
-}
-
-.x-datepickerplus-eventdates-leyenda {
-	background-color:#ccccff;
-	border:1px solid #000088;
-	width:20px;
-	height:20px;
-}
-
-.x-datepickerplus-eventdates-nopase a {
-	background-color:#FFCCCC;
-
 }
 
 
@@ -189,53 +156,51 @@ th.x-date-weeknumber-header a:hover,
 	visibility:hidden !important;
 }
 
-.x-link-button{
-	display: block;
-	height:50px;
-	text-align:center;
-	padding:2px;
-	border: 1px solid #000;
-	background-color: #FFF;
-	text-decoration:none;
-	font-family:Verdana;
-	font-size:10px
+/*
+Reverse Ext 3.2.x Hack to display more than 1 months vertically on datemenu
+*/
+.ext-ie .x-date-menu,
+.ext-strict .ext-ie .x-date-menu, .ext-border-box .ext-ie8 .x-date-menu,
+.ext-strict .ext-ie7 .x-date-menu{	
+    height: auto;
 }
 
-.x-link-button:hover{	
-	text-decoration:none;
-	border: 1px solid #000;
-	background-color: #00CCFF;
+.x-datepickerplus-fieldprev {
+	background-image:url(prev-tgr.gif) !important;
+	cursor:pointer;
 }
 
-.x-link-button-remove{
-	display: block;
-	height:50px;
-	text-align:center;
-	padding:2px;
-	border: 1px solid #000;
-	background-color: #CCCCFF;
-	text-decoration:none;
-	font-family:Verdana;
-	font-size:10px
+.x-datepickerplus-fieldnext {
+	background-image:url(next-tgr.gif) !important;
+	cursor:pointer;
 }
 
-.x-link-button-remove:hover{	
-	text-decoration:none;
-	border: 1px solid #000;
-	background-color: #00CCFF;
+.x-datepickerplus-prevnext-ext3,
+.x-datepickerplus-prevnext-ext3-next {
+	margin-left:17px;
 }
 
-/* Sobreescribir los estados por defecto para banco POPULAR */
+/* ie6-8 fixes */
 
-.x-date-inner  .x-date-disabled a:hover{
-    text-decoration:none !important;
-    color:black;
-	background-color:#FFCCCC;
+.ext-ie6 .x-datepickerplus-prevnext-ext3 {
+	margin-left:0px !important;
+	left:17px;
 }
 
-.x-date-inner .x-date-disabled a {
-	cursor:default;
-	background-color:#FFCCCC;
+.ext-ie6 .x-datepickerplus-prevnext-ext3-date {
+	margin-left:17px;
 }
 
+.ext-ie6 .x-datepickerplus-prevnext-ext3-next {
+	margin-left:34px !important;
+}
 
+.ext-ie7 .x-datepickerplus-prevnext-ext3-date,
+.ext-ie8 .x-datepickerplus-prevnext-ext3-date {
+	margin-right:17px;
+}
+
+.ext-ie7 .x-datepickerplus-prevnext-ext3-prev,
+.ext-ie8 .x-datepickerplus-prevnext-ext3-prev {
+	margin-right:100px;
+}
