--- a/root/static/final.css
+++ b/root/static/final.css
@@ -23,7 +23,15 @@
     color: #fff;
 }
 
+/* -- put gritter close on the right
+    
 .gritter-close {
 	left:270px;
+}
+*/
+
+.bali-avatar {
+    height: 16px !important;
+    width: 16px !important;
 }
 
