--- a/root/fields/templates/html/dbl_row_body.html
+++ b/root/fields/templates/html/dbl_row_body.html
@@ -6,7 +6,7 @@
 % if( !$meta->{hidden} ) {
 %# if( $meta->{name_field} eq 'description'){
     <tr>
-        <th colspan="2"><% _loc($meta->{name_field}) %>:</th>
+        <th colspan="2"><% _loc($meta->{id_field}) %>:</th>
     </tr>
 %#}
     <tr>
