--- a/root/fields/templates/html/dbl_row_head.html
+++ b/root/fields/templates/html/dbl_row_head.html
@@ -6,10 +6,11 @@
 % if( !$meta->{hidden} ) {
 %# if( $meta->{name_field} eq 'description'){
     <tr>
-        <th colspan="2"><% _loc($meta->{name_field}) %>:</th>
+        <th colspan="2" style="padding: 10px 0 10px 0"><h5 style="border-bottom: 1px solid #bbb"><% _loc($meta->{name_field}) %></h5></th>
     </tr>
 %#}
     <tr>
         <td colspan="2"><% $data->{$meta->{display_field}} || $data->{$meta->{bd_field}} || '&nbsp;' %></td>
     </tr>
 % }     
+
