--- a/root/static/sprites.css
+++ b/root/static/sprites.css
@@ -74,8 +74,8 @@
 .sprite.copy { background-position: 0px -1922px !important;  } 
 .sprite.database_refresh { background-position: 0px -1948px !important;  } 
 .sprite.delete { background-position: 0px -1974px !important;  } 
-.sprite.delete { background-position: 0px -2000px !important;  } 
-.sprite.delete2 { background-position: 0px -2026px !important;  } 
+.sprite.delete2 { background-position: 0px -2000px !important;  } 
+.sprite.delete3 { background-position: 0px -2026px !important;  } 
 .sprite.detach { background-position: 0px -2052px !important;  } 
 .sprite.detail { background-position: 0px -2078px !important;  } 
 .sprite.door_out { background-position: 0px -2104px !important;  } 
@@ -90,7 +90,7 @@
 .sprite.drive_go { background-position: 0px -2338px !important;  } 
 .sprite.eclipse { background-position: 0px -2364px !important;  } 
 .sprite.edit { background-position: 0px -2390px !important;  } 
-.sprite.edit { background-position: 0px -2416px !important; width: 16px; height: 14px ;} 
+.sprite.edit1 { background-position: 0px -2416px !important; width: 16px; height: 14px ;} 
 .sprite.drop-yes { background-position: 0px -2440px !important;  } 
 .sprite.drive_delete { background-position: 0px -2466px !important;  } 
 .sprite.element_new_after { background-position: 0px -2492px !important;  } 
