--- a/root/static/site.css
+++ b/root/static/site.css
@@ -371,3 +371,60 @@ pre { font-family: Consolas, Courier New, mono; }
     background-position:-14px 0;
 }
 
+/*** 
+ *
+ *
+ *
+ * from docs.css - mostly useful for <a> tag styling
+ *
+ *
+ *
+***/
+
+#loading-mask{
+	position:absolute;
+	left:0;
+	top:0;
+    width:100%;
+    height:100%;
+    z-index:20000;
+    background-color:white;
+}
+#loading{
+	position:absolute;
+	left:45%;
+	top:40%;
+	padding:2px;
+	z-index:20001;
+    height:auto;
+}
+#loading img {
+    margin-bottom:5px;
+}
+#loading .loading-indicator{
+	background:white;
+	color:#555;
+	font:bold 13px helvetica,arial,tahoma,sans-serif;
+	padding:10px;
+	margin:0;
+    text-align:center;
+    height:auto;
+}
+a {
+	color: #1E4176;
+}
+a:link {
+	color: #1E4176;
+	text-decoration: none;
+}
+
+a:visited {
+   color: #555;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
+	color: #15428b;
+}
+
