topic description style, status framed style

--- a/root/fields/templates/html/row_body.html
+++ b/root/fields/templates/html/row_body.html
@@ -6,6 +6,7 @@
 % if( !$meta->{hidden} ) {
     <tr>
       <th><% _loc($meta->{name_field}) %>:</th>
-      <td><% $data->{$meta->{display_field}}  || $data->{$meta->{bd_field}} %></td>
+      <td 
+          style="<% $meta->{framed} and 'text-transform: uppercase; font-size: 10px; font-weight:bold; background-color: #eee; text-align: center' %>" ><% $data->{$meta->{display_field}}  || $data->{$meta->{bd_field}} %></td>
     </tr>
 % }
