column span, but width not working for textfields, using 97%

--- a/root/static/final.css
+++ b/root/static/final.css
@@ -27,6 +27,10 @@
     width: 100%;
 }
 
+.bali-form-table .x-table-layout-cell {
+    width: 1%;   /* this should help anchor:100% work, but doesn't...?? */
+}
+
 /* -- put gritter close on the right
     
 .gritter-close {
