--- a/root/fields/templates/html/row_body.html
+++ b/root/fields/templates/html/row_body.html
@@ -2,11 +2,11 @@
     $meta
     $data
 </%args>
-
-% if( !$meta->{hidden} ) {
+% my $val = $data->{$meta->{display_field}}  || $data->{$meta->{bd_field}};
+% if( defined $val && !$meta->{hidden} ) {
     <tr>
       <th><% _loc($meta->{name_field}) %>:</th>
       <td 
-          style="<% $meta->{framed} and 'text-transform: uppercase; font-size: 10px; font-weight:bold; background-color: #eee; text-align: center' %>" ><% _loc($data->{$meta->{display_field}}  || $data->{$meta->{bd_field}}) %></td>
+          style="<% $meta->{framed} and 'text-transform: uppercase; font-size: 10px; font-weight:bold; background-color: #eee; text-align: center' %>" ><% _loc( $val ) %></td>
     </tr>
 % }
