--- a/root/fields/templates/html/grid_editor.html
+++ b/root/fields/templates/html/grid_editor.html
@@ -9,13 +9,21 @@
 % }     
 <%perl>
     my $json = $data->{$meta->{bd_field}} ;
-    $json = Util->_unac( $json );
+    $json = Encode::encode('UTF-8', $json);
+    #my $json_utf8 = Encode::encode('UTF-8', $json);
+    #$json = Util->_unac( $json ); # XXX
+    my $ix = 0;
+    my $cols = ref $meta->{columns} ? $meta->{columns} : do {
+        [ map { [ split /,/ ] } split /;/, $meta->{columns} ]
+    };
+    
     if( !$meta->{hidden} && length $json ) {
         my $d = Util->_from_json( $json ); 
         my @rows = Util->_array( $d );
-        my @head = keys %{ $rows[0] || {} };
+        my @head = map { +{ key=>_name_to_id($_->[0]), name=>$_->[0], width=>$_->[2], type=>$_->[1] }  } @$cols; 
+        @head = map { +{ key=>$_, name=>$_ } } keys %{ $rows[0] || {} }
+            if ! @head;
 </%perl>
-
     <tr>
       <td style="<% $meta->{framed} and 'text-transform: uppercase; font-size: 10px; font-weight:bold; background-color: #eee; text-align: center' %>" >
 % if( @rows ) { 
@@ -23,7 +31,7 @@
               <thead>
                 <tr>
 % foreach my $h ( @head ) {
-                <th><% _loc( $h ) %></th>
+                    <th width="<% $$h{width} %>"><% _loc( $$h{name} ) %></th>
 % }
                 </tr>
               </thead>
@@ -31,7 +39,15 @@
 % foreach my $row ( @rows ) {
                 <tr>
 % foreach my $h ( @head ) {
-                    <td style="font-size: <% $meta->{td_font_size} // 12 %>px"><% $row->{$h} %></td>
+%    my $val = $row->{ $$h{key} };
+                        <td style="font-size: <% $meta->{td_font_size} // 12 %>px"><% 
+                            $$h{type} eq 'checkbox' 
+                            ? ( !$val || $val eq 'false' ? '<img src="/static/images/icons/delete.gif">' : '<img src="/static/images/icons/checkbox.png">')
+                            : $$h{type} eq 'index' 
+                                ? ++$ix
+                                : $val
+                            %>
+                        </td>
 % }
                 </tr>
 % }
