--- a/root/fields/templates/html/ci_grid.html
+++ b/root/fields/templates/html/ci_grid.html
@@ -15,7 +15,7 @@
 % foreach my $ci ( map { _ci($_) } @rows ) {
 <tr>
     <td width=32><img src="<% $ci->icon %>" /></td>
-    <td><% $ci->name %></td>
+    <td style="font: 12px Consolas,Courier New,monotype;"><% $ci->name %></td>
     <td width="1">v<% $ci->versionid %></td>
     <td width="1"><% $ci->collection %></td>
 </tr>
@@ -49,3 +49,4 @@
 % } 
 
 </%doc>
+
