markdown for fields, with custom fieldlet-html style

--- a/root/fields/templates/html/grid_editor.html
+++ b/root/fields/templates/html/grid_editor.html
@@ -8,6 +8,8 @@
     </tr>
 % }     
 <%perl>
+    require Text::Markdown;
+
     my $json = $data->{$meta->{bd_field}} ;
     $json = Encode::encode('UTF-8', $json);
     #my $json_utf8 = Encode::encode('UTF-8', $json);
@@ -41,14 +43,13 @@
                 <tr>
 % foreach my $h ( @head  ) {
 %    my $val = $row->{ $$h{key} };
-                        <td style="font-size: <% $meta->{td_font_size} // 12 %>px"><% 
+                        <td style="font-size: <% $meta->{td_font_size} // 12 %>px" class="fieldlet-html"><% 
                             $$h{type} eq 'checkbox' 
                             ? ( !$val || $val eq 'false' ? '<img src="/static/images/icons/delete.gif">' : '<img src="/static/images/icons/checkbox.png">')
                             : $$h{type} eq 'index' 
                                 ? ++$ix
-                                : $val
-                            %>
-                        </td>
+                                : Text::Markdown::markdown($val, { tab_width=>2 })
+                        %></td>
 % }
                 </tr>
 % }
