--- a/root/fields/templates/html/markdown.html
+++ b/root/fields/templates/html/markdown.html
@@ -12,6 +12,6 @@
         <th colspan="2" style="padding: 10px 0 10px 0"><h5 style="border-bottom: 1px solid #bbb"><% _loc($meta->{name_field}) %></h5></th>
     </tr>
     <tr>
-        <td colspan="2"><% $val %></td>
+        <td colspan="2" class="fieldlet-html"><% $val %></td>
     </tr>
 % }     
