--- a/root/fields/templates/html/row_body.html
+++ b/root/fields/templates/html/row_body.html
@@ -7,6 +7,7 @@
     <tr>
       <th><% _loc($meta->{name_field}) %>:</th>
       <td 
+          class="fieldlet-html"
           style="<% $meta->{framed} and 'text-transform: uppercase; font-size: 10px; font-weight:bold; background-color: #eee; text-align: center' %>" ><% _loc( $val ) %></td>
     </tr>
 % }
