--- a/root/fields/templates/html/dbl_row_body.html
+++ b/root/fields/templates/html/dbl_row_body.html
@@ -2,6 +2,9 @@
     $meta
     $data
 </%args>
+<%doc>
+   Normally this is the description field text and header on the left side.
+</%doc>
 % if( !$meta->{hidden} ) {
     <tr>
         <th colspan="2" style="padding: 10px 0 10px 0"><h5 style="border-bottom: 1px solid #bbb"><% _loc($meta->{name_field}) %></h5></th>
