--- a/root/fields/templates/html/pills.html
+++ b/root/fields/templates/html/pills.html
@@ -12,8 +12,8 @@
       <th><% _loc($meta->{name_field}) %>:</th>
       <td> 
          <span class="badge" style="font-size: 12px; color: #fff; background-color: <% $opts{$val} %>" >
-                <% _loc( $val ) %></td>
-         </span>
+                <% _loc( $val ) %>
+         </span></td>
     </tr>
 % }
 
