padding 1px on styleCheckboxWrap

--- a/root/static/final.css
+++ b/root/static/final.css
@@ -176,6 +176,7 @@
 }
 
 .styledCheckboxWrap {
+    padding: 1px;
     position: relative;
     background: url('/static/images/row-check-sprite.png') no-repeat;
     height: 18px;
