--- a/root/fields/templates/html/status_changes.html
+++ b/root/fields/templates/html/status_changes.html
@@ -24,13 +24,13 @@
       <table class="table table-bordered table-condensed">
       <tbody>
          <tr>
-             <td style="font: 13px OpenSans, Lato, Calibxri, Tahoma; background-color: #ECF0F1; color: #111;"><% $data->{created_on} // Util->ago( $data->{created_on})   %></td>
+             <td style="font: 13px OpenSans, Lato, Calibxri, Tahoma; background-color: #fff; color: #111;"><% Util->ago( $data->{created_on_epoch} )   %></td>
              <td><img style="margin: 0px 5px 2px 0px" width=16 src="/user/avatar/<% $data->{created_by} %>/image.png" /><% $data->{created_by}  %></td>
              <td colspan=3 class="status-html" style="font-size: 10px; font-weight: bold"><% _loc('Created') %></td>
         </tr>
 % for my $ch ( @status_changes ) {
          <tr>
-             <td style="font: 13px OpenSans, Lato, Calibxri, Tahoma; background-color: #ECF0F1; color: #111; "><% $data->{created_on} // Util->ago( $ch->{when} )  %></td>
+             <td style="font: 13px OpenSans, Lato, Calibxri, Tahoma; background-color: #fff; color: #111; "><% Util->ago( $ch->{when} )  %></td>
              <td><img style="margin: 0px 5px 2px 0px" width=16 src="/user/avatar/<% $ch->{username} %>/image.png" /><% $ch->{username}  %></td>
              <td class="status-html" style="font-size: 10px; font-weight: bold"><% $ch->{old_status}  %></td>
              <td><img src="/static/images/icons/right-arrow.png"></td>
