--- a/root/fields/templates/html/markdown.html
+++ b/root/fields/templates/html/markdown.html
@@ -2,14 +2,15 @@
     $meta
     $data
 </%args>
-<%doc>
-   Normally this is the description field text and header on the left side.
-</%doc>
+<%perl>
+    my $val = $data->{$meta->{display_field}} || $data->{$meta->{bd_field}};
+    $val = Util->_markdown( $val );
+</%perl>
 % if( !$meta->{hidden} ) {
     <tr>
         <th colspan="2" style="padding: 10px 0 10px 0"><h5 style="border-bottom: 1px solid #bbb"><% _loc($meta->{name_field}) %></h5></th>
     </tr>
     <tr>
-        <td colspan="2" class="fieldlet-html"><% _loc($data->{$meta->{display_field}} || $data->{$meta->{bd_field}} || '&nbsp;') %></td>
+        <td colspan="2" class="fieldlet-html"><% $val %></td>
     </tr>
 % }     
