--- a/root/fields/templates/html/markdown.html
+++ b/root/fields/templates/html/markdown.html
@@ -7,10 +7,12 @@
     $val = Util->_markdown( $val );
 </%perl>
 % if( !$meta->{hidden} ) {
+%  if( !$meta->{hide_title} ) {
     <tr>
         <th colspan="2" style="padding: 10px 0 10px 0"><h5 style="border-bottom: 1px solid #bbb"><% _loc($meta->{name_field}) %></h5></th>
     </tr>
+%  }
     <tr>
-        <td colspan="2" class="fieldlet-html"><% $val %></td>
+        <td colspan="2" style="padding-top: 15px; <% $meta->{html_style} %>" class="fieldlet-html <% $meta->{html_class} %>"><% $val %></td>
     </tr>
 % }     
