--- a/root/fields/templates/html/grid_editor.html
+++ b/root/fields/templates/html/grid_editor.html
@@ -80,7 +80,7 @@
                                         my $cd = Class::Date->new( $val );
                                         my $st = $row->{overdue} ? 'color: #f34' : '';
                                         my $wd = $cd->wdayname;
-                                        $wd = Encode::encode('UTF-8', $wd);
+                                        $wd = Encode::decode('UTF-8', $wd);
                                         _loc($wd) . " " . $cd->string . " - <span style='$st;font-weight: bold'>" . Util->ago( $cd ) . '</span>';
                                     } else {
                                         $val
