Removed arrow from status_changes field

--- a/root/fields/templates/html/status_changes.html
+++ b/root/fields/templates/html/status_changes.html
@@ -28,7 +28,8 @@
              <td style="font: 13px OpenSans, Lato, Calibxri, Tahoma; background-color: #fff; color: #111; "><% Util->ago( $ch->{when} )  %></td>
              <!-- <td><img style="margin: 0px 5px 2px 0px" width=16 src="/user/avatar/<% $ch->{username} %>/image.png" /><% $ch->{username}  %></td> -->
              <td class="status-html" style="font-size: 10px; font-weight: bold"><% $ch->{old_status}  %></td>
-             <td><img src="/static/images/icons/right-arrow.png"></td>
+             <td>-</td>
+             <!-- <td><img src="/static/images/icons/right-arrow.png"></td> -->
              <td class="status-html" style="font-size: 10px; font-weight: bold"><% $ch->{status}  %></td>
          </tr>
 % }
