--- a/root/partial/topic_name.html
+++ b/root/partial/topic_name.html
@@ -2,20 +2,20 @@
     $topic
     $title_max_length => 32
     $title_font_size => '11px'
-    $show_title => 1
+    $show_title => 0
     $show_progress => 1
 </%args>
 <%perl>
     my $title_short = sub {
         my ($t) = @_;
-        if( length $t > $title_max_length ) {
-            $t = substr( $t, 0, $title_max_length ) . "\N{U+2026}";
-        } 
+    #    if( length $t > $title_max_length ) {
+    #        $t = substr( $t, 0, $title_max_length ) . "\N{U+2026}";
+    #    } 
         $t;
     };
 </%perl>
 
-            <span id="topic<% $topic->{mid} %>" class="label" onclick="javascript:Baseliner.show_topic_colored(<% $topic->{mid} %>, '<% $topic->{name} %>', '<% $topic->{color} %>')" 
+            <span id="topic<% $topic->{mid} %>" title="<% $title_short->($topic->{title}) %>" class="label" onclick="javascript:Baseliner.show_topic_colored(<% $topic->{mid} %>, '<% $topic->{name} %>', '<% $topic->{color} %>')" 
             style="cursor:pointer;background: <% $topic->{color} %>"><% $topic->{name} %></span>
 % my $cls = ( $topic->{progress} < 20 ? 'important' : ( $topic->{progress} < 40 ? 'warning' : ( $topic->{progress} < 80 ? 'info' : 'success' ) ) );
 % if( $show_title ) {
@@ -26,7 +26,7 @@
 %}
 
 <script>
-    var obj_topic_name = Ext.query('#topic<% $topic->{mid} %>');
-    obj_topic_name[0].innerHTML = Baseliner.topic_title( '<% $topic->{mid} %>', '<% $topic->{name} %>', '<% $topic->{color} %>', true );
+    //var obj_topic_name = Ext.query('#topic<% $topic->{mid} %>');
+    //obj_topic_name[0].innerHTML = Baseliner.topic_title( '<% $topic->{mid} %>', '<% $topic->{name} %>', '<% $topic->{color} %>', true );
 
 </script>
