--- a/root/partial/topic_name.html
+++ b/root/partial/topic_name.html
@@ -4,6 +4,8 @@
     $title_font_size => '11px'
     $show_title => 0
     $show_progress => 1
+    $show_short_name => 0
+    $show_name_tooltip => 1
 </%args>
 <%perl>
     my $title_short = sub {
@@ -15,7 +17,7 @@
     };
 </%perl>
 
-            <span id="topic<% $topic->{mid} %>" title="<% $title_short->($topic->{title}) %>" class="label" onclick="javascript:Baseliner.show_topic_colored(<% $topic->{mid} %>, '<% $topic->{name} %>', '<% $topic->{color} %>')" 
+            <span id="topic<% $topic->{mid} %>" class="label" onclick="javascript:Baseliner.show_topic_colored(<% $topic->{mid} %>, '<% $topic->{name} %>', '<% $topic->{color} %>')" 
             style="cursor:pointer;background: <% $topic->{color} %>"><% $topic->{name} %></span>
 % my $cls = ( $topic->{progress} < 20 ? 'important' : ( $topic->{progress} < 40 ? 'warning' : ( $topic->{progress} < 80 ? 'info' : 'success' ) ) );
 % if( $show_title ) {
@@ -25,8 +27,17 @@
             <span class="badge badge-<%$cls%>" style="float:right;"><%$topic->{progress}%>%</span>
 %}
 
+% if( $show_short_name ) {
 <script>
-    //var obj_topic_name = Ext.query('#topic<% $topic->{mid} %>');
-    //obj_topic_name[0].innerHTML = Baseliner.topic_title( '<% $topic->{mid} %>', '<% $topic->{name} %>', '<% $topic->{color} %>', true );
-
+    var obj_topic_name = Ext.query('#topic<% $topic->{mid} %>');
+    obj_topic_name[0].innerHTML = Baseliner.topic_title( '<% $topic->{mid} %>', '<% $topic->{name} %>', '<% $topic->{color} %>', true );
 </script>
+%}
+% if( $show_name_tooltip ) {
+<script>
+    var obj_topic_name = Ext.query('#topic<% $topic->{mid} %>');
+    obj_topic_name[0].innerHTML = Baseliner.topic_title( '<% $topic->{mid} %>', '<% $topic->{name} %>', '<% $topic->{color} %>', true );
+    obj_topic_name[0].setAttribute("title", "<% $title_short->($topic->{title}) %>");
+</script>
+% }
+
