search results color title a pale blue

--- a/root/static/site.css
+++ b/root/static/site.css
@@ -224,7 +224,7 @@ td.slot_hover { border: #000 1px dashed }
 
 #search-result-block-title {
     font-size: 16px;
-    color: #0033e0;
+    color: #111;  /* blue link no more #0033e0; */
 }
 
 /*************************************************
