--- a/root/fields/templates/html/status_chart_pie.html
+++ b/root/fields/templates/html/status_chart_pie.html
@@ -32,9 +32,9 @@
 
 % if(@topics_by_status){
 	<div id="principal" style="clear:left;" >
-		<h2><%$meta->{name_field}%></h2><br>
+		<b><%$meta->{name_field}%></b><br>
 		<div id="<%$graph_id%>" 
-			style="width: 250px; height: 250px; float: left; " 
+			style="width: 150px; height: 150px; float: left; " 
 			onmouseout="document.body.style.cursor='default';"></div>
 		<div id="<%$graph_id%>legend" ></div>
 	</div>
