--- a/root/fields/templates/html/status_chart_pie.html
+++ b/root/fields/templates/html/status_chart_pie.html
@@ -31,14 +31,14 @@
 </%perl>
 
 % if(@topics_by_status){
-	<div id="principal" style="clear:left;" >
+	<div style="clear:left;" >
 		<b><%$meta->{name_field}%></b><br>
 		<div id="<%$graph_id%>" 
 			style="width: 150px; height: 150px; float: left; " 
 			onmouseout="document.body.style.cursor='default';"></div>
 		<div id="<%$graph_id%>legend" ></div>
 	</div>
-
+    <div style="clear:left;" ></div>
 
 
 <script type="text/javascript">
