--- a/root/fields/templates/html/status_chart_pie.html
+++ b/root/fields/templates/html/status_chart_pie.html
@@ -61,7 +61,7 @@
                     radius: 0.9,
                     tilt: 0.7,
                     label: {
-                        show: true,
+                        show: false,
                         radius: 0.5,
                         formatter: function(label, series){
                             return '<div style="font-size:8pt;color:white;margin-left:-5px">'+Math.round(series.percent)+'%</div>';
